# iot_scale

./: .gitignore  README.md  control.html  go.mod  go.sum  main.go
cpp/: ya.make
cpp/example/: bike_proto_example.cpp  ya.make
cpp/src/: CMakeLists.txt  bike_iot_visitor.h  command_result_validator.cpp  command_result_validator.h  command_validator.cpp  command_validator.h  command_visitor.h  constants.h  helpers.cpp  helpers.h  helpers_backend.cpp  notification_validator.cpp  notification_validator.h  packet_validator.cpp  packet_validator.h  packet_visitor.h  protocol_converter.cpp  protocol_converter.h  request_validator.cpp  request_validator.h  request_visitor.h  response_validator.cpp  response_validator.h  telemetry_validator.cpp  telemetry_validator.h  types.h  ya.make
cpp/tests/: backward_compatibility_tests.cpp  bike_proto_helpers_tests.cpp  bike_proto_protocol_converter_tests.cpp  bike_proto_tests.cpp  ya.make
mcp_client/: go.mod  main.go  readme.md
mcp_server/: config.json  go.mod  go.sum  main.go  readme.md
params/: options.json  reports.json
proto/: command.pb.go  command_payload.pb.go  command_result.pb.go  command_result_payload.pb.go  error.pb.go  notification.pb.go  notification_payload.pb.go  packet.pb.go  request.pb.go  request_payload.pb.go  response.pb.go  response_payload.pb.go  telemetry.pb.go  telemetry_payload.pb.go
proto/protofiles/: CMakeLists.txt  command.proto  command_payload.proto  command_result.proto  command_result_payload.proto  error.proto  notification.proto  notification_payload.proto  packet.proto  request.proto  request_payload.proto  response.proto  response_payload.proto  telemetry.proto  telemetry_payload.proto  ya.make
